--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <div class="player">
        <div class="wrapper">
            <div class="details">
-               <div class="now-playing">PLAYING x OF y</div>
+               <div class="now-playing">PLAYING X OF Y</div>
                <div class="track-art"></div>
                <div class="track-name">Track Name</div>
                <div class="track-artist">Track Artist</div>
